--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CS2BrowserLauncher",
   "productName": "CS2Browser - Launcher",
-  "version": "0.2.3",
+  "version": "0.2.3 chill.lv edition",
   "description": "CS2Browser - Launcher - Download manager and Launcher for CS2",
   "main": ".webpack/main",
   "scripts": {
